# gnu-toolchain-windows-arm64

./: .gitignore  README.md  build.sh
.github/cmake/: aarch64-w64-mingw32.cmake
.github/scripts/: clear-caches.sh  config-yml.sh  config.sh  enable-ccache.sh  get-cache-keys.sh  install-dependencies.sh  install-libraries.sh
.github/scripts/binutils/: build.sh
.github/scripts/libjpeg-turbo/: build.sh  execute-tests.ps1
.github/scripts/tests/: build.sh
.github/scripts/toolchain/: build-cygwin.sh  build-gcc-stage1.sh  build-gcc.sh  pack.sh
.github/scripts/zlib/: build.sh
.github/workflows/: advanced.yml  build-and-test-toolchain.yml  clear-caches.yaml  main.yml  prerelease-test.yml  rebase.yml  test-toolchain.yml
actions/build-toolchain/: action.yml
tests/: CMakeLists.txt  def-export.c  def-export.def  dll-export.c  dll-test.c  gtest_like_c.h  main.c  math-test.c  seh-stp-nonconsecutive.cpp  seh-stp-unspec.cpp  varargs-test.c
